@@ -209,7 +209,7 @@
 	*current-child* *current-root*)
   (call-hook *init-hook*)
   (process-existing-windows *screen*)
-  (show-all-children *current-root*)
+  (show-all-children)
   (grab-main-keys)
   (xlib:display-finish-output *display*))
 
